--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 		<span id="starSpan" ></span>
 	</div>
 	<div style="display:none;">
-		<img id="snakeHead" src='https://uc18a643fbe046f3d4029173bf7c.dl.dropboxusercontent.com/cd/0/inline/CCoeU7jJmQ4MkgT8NLNiHGXitKyoQ-9D3jfKqZp1lu4SOmoGmPnmXzn2c-4fQBliuBuLAhQ2Rn1bnJVc4zzum-8mAHGExWf_zrk2PPcWpSpSCqqFoGAPPV3Pd6N6Jo82HMUuVGqdjsZosGjrKOeBXI5H/file#'/>
-		<img id="snakeHead_openMouth" src='https://uc28c0e7705ad0c4bf04fc52f82b.dl.dropboxusercontent.com/cd/0/inline/CCoeYPVwNwotBX61w-mB-VtKMeIZTqqdrKEjFzb7cPfR4VyQw4tzfxyg2MEZUGsHVNvsBij2TdvHBmksFZE3VXdzfmdZgL7O-T97rkSP9PyI8bkFVt9Hj7LBuZzaPCU_Ec6dvS1mgvLTXr32EywXVOCk/file#'/>
+		<img id="snakeShutMouth" src='images/snakeShutMouth.png'/>
+		<img id="snakeOpenMouth" src='images/snakeOpenMouth.png'/>
 	</div>
 	<canvas id="can" width="800px" height="800px" style="border: 8px double chocolate; margin-bottom: 20px;">对不起，您的浏览器不支持canvas</canvas>
 	<!-- Rounded switch -->
@@ -124,7 +124,7 @@
 		'https://media.giphy.com/media/liFaAWEOa1uKc/giphy.gif',
 		'https://media.giphy.com/media/2gtoSIzdrSMFO/giphy.gif'];
 		var gifImg = document.getElementById('suprise');
-		const snakeHeadImg = document.getElementById("snakeHead");
+		const snakeHeadImg = document.getElementById("snakeShutMouth");
 		const snakeHeadImgOpen = document.getElementById("snakeHead_openMouth");
 		
         function drawHead(seat, openMouth) {
